--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -6,6 +6,7 @@
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
+  font-size: 13px;
 }
 
 .nav__list {
@@ -18,8 +19,46 @@
   color: #2e363e;
 }
 
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(45deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
   position: absolute;
-  left: 18px;
-  bottom: 18px;
+  left: 13px;
+  bottom: 13px;
+  animation: notificationAnimation 2s ease-in-out infinite;
+}
+
+@keyframes appearBtnAnimation {
+  from {
+  }
+  to {
+    transform: none;
+    opacity: 1;
+  }
+}
+
+.nav__btn {
+  transform: translateY(80px);
+  opacity: 0;
+  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.nav__btn:nth-child(3) {
+  animation-delay: 0.4s;
+}
+.nav__btn:last-child {
+  animation-delay: 0.6s;
 }
