--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,15 +3,28 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--horizontal-space);
-  margin-top: 26px;
-  margin-bottom: 15px;
+  margin-top: 20px;
+  margin-bottom: 0px;
 }
 
 .screen-header__title {
-  font-size: 28px;
+  font-size: 25px;
   font-weight: 600;
 }
 
 .screen-header__icons span {
   margin-left: 20px;
+}
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1.5s linear infinite;
 }
